Actions that require user gesture don't work in window.showModalDialog in Chromium https://bugs.webkit.org/show_bug.cgi?id=113777

Reviewed by Jochen Eisinger.

In Chromium the window for showModalDialog is not modal which causes the
UserGestureIndicator to block actions in the sub window. We introduce a
RAII that saves the UserGestureIndicator and state, then resets it before
runModalDialog, and restore it when it's done.

No new tests. Can't cause user gesture inside modal dialog.

* dom/UserGestureIndicator.cpp:
(WebCore::UserGestureIndicatorDisabler::UserGestureIndicatorDisabler): Saves and resets the topmost indicator and state.
(WebCore):
(WebCore::UserGestureIndicatorDisabler::~UserGestureIndicatorDisabler): Restores topmost indicator and state.
* dom/UserGestureIndicator.h:
(WebCore):
(UserGestureIndicatorDisabler): RAII to temporarily disable UserGestureIndicator.
(UserGestureIndicator): Allow access to UserGestureIndicatorDisabler.
* page/DOMWindow.cpp:
(WebCore::DOMWindow::showModalDialog): Disable UserGestureIndicator while runModalDialog.


Canonical link: https://commits.webkit.org/132222@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147554 268f45cc-cd09-0410-ab3c-d52691b4dbfc