Source/WebCore/page/DOMWindow.cpp
@@ -1998,7 +1998,7 @@ void DOMWindow::showModalDialog(const String& urlString, const String& dialogFea
         activeWindow, firstFrame, m_frame, function, functionContext);
     if (!dialogFrame)
         return;
-
+    UserGestureIndicatorDisabler disabler;
     dialogFrame->page()->chrome()->runModal();
 }
 
